--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,17 +1,25 @@
 name: .NET
 
+
+
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
+
+
 jobs:
   build:
 
-    runs-on: ubuntu-latest
 
-    steps:
+
+   runs-on: ubuntu-latest
+
+
+
+   steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -19,7 +27,10 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: SafariPark_Final
     - name: Build
       run: dotnet build --no-restore
+      working-directory: SafariPark_Final
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: SafariPark_Final
